CareWheels/www/css/style.css
/* Empty. Add your own CSS if you like */
a{
  text-decoration: none;
  color: white;
}
/* used for the menu, take up all the available space */
embed{
  width: 100%;
  height: 100%;
}

.devButton {
  position: relative;
  width: 200px;
  height: 30px;
  background: rgba(91,163,240,1);
  /*border radius*/
  border-radius: 5px 5px 5px 5px;
  border: 0 solid #000000;
  background: linear-gradient(to bottom, rgba(91,163,240,1) 0%, rgba(25,55,191,1) 100%);

  text-align: center;
  font-size: 20px;
  margin-bottom: 10px;
  padding: 3px;

}
.devButton:active {
  box-shadow: inset 0 0 10px 0 rgba(0,0,0,0.5);
}


/* For individualStatus */
.col {
  border: solid 1px grey;
  text-align: center;
}

.col.no_border {
  border: none;
}

.col.blue {
  border: solid 1px grey;
  background-color: blue;
  color: white;
}

.col.grey {
  border: solid 1px grey;
  background-color: grey;
}

.col.yellow {
  border: solid 1px grey;
  background-color: yellow;
}

.col.red {
  border: solid 1px grey;
  background-color: red;
}

.overflowHide {
  overflow-x: hidden;
  overflow-y: hidden;
}
.moveDown{
  top: 43px;
}

.reminderTime {
  margin-left: 200px;
  text-align: center;
  font-size:30px;
}
.amPmToggle {
  height: 60px;
  padding-right: 57px;
  right: -2px;
  border: none;
}
.amPmCheckBox {
  position: inherit;
}
.amPmTogglePosition {
  display: inline-block;
  margin-left: 10px;
  margin-top: 0;
}
.amPmTrack {
  position: absolute;
}
.amPmfHandle {
  left: 60px;
}

.onOffToggle {
  left: 16px;
}

.onOffHandle {
  margin-left: 32px;
}

